infrastructure/node-main/ns-media/base/seerr/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  labels:
    app.kubernetes.io/name: seerr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: seerr
  ports:
    - name: http
      port: 5055
      targetPort: http
      protocol: TCP
