infrastructure/node-main/ns-media/base/seerr/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
  labels:
    app.kubernetes.io/name: seerr
spec:
  ingressClassName: traefik
  rules:
    - host: seerr.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  name: http
